--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -14,6 +14,18 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition ></ColumnDefinition>
         </Grid.ColumnDefinitions>
+        <Grid.Background>
+            <RadialGradientBrush 
+        GradientOrigin="0.5,0.5" 
+        Center="0.5,0.5" RadiusX="0.5" RadiusY="0.5">
+                <RadialGradientBrush.GradientStops>
+                    <GradientStop Color="Gray" Offset="0" />
+                    <GradientStop Color="Gray" Offset="0.25" />
+                    <GradientStop Color="Gray" Offset="0.75" />
+                    <GradientStop Color="Gray" Offset="1" />
+                </RadialGradientBrush.GradientStops>
+            </RadialGradientBrush>
+        </Grid.Background>
         <Grid Grid.Column="0" Grid.Row="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="33*"></RowDefinition>
