--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="Tic-Tac-Toe" Height="600" Width="500">
-    <Grid>
+    <Grid Background ="Black">
         <Grid.RowDefinitions>
             <RowDefinition Height="75*"></RowDefinition>
             <RowDefinition Height="25*"></RowDefinition>
@@ -14,18 +14,6 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition ></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid.Background>
-            <RadialGradientBrush 
-        GradientOrigin="0.5,0.5" 
-        Center="0.5,0.5" RadiusX="0.5" RadiusY="0.5">
-                <RadialGradientBrush.GradientStops>
-                    <GradientStop Color="Gray" Offset="0" />
-                    <GradientStop Color="Gray" Offset="0.25" />
-                    <GradientStop Color="Gray" Offset="0.75" />
-                    <GradientStop Color="Gray" Offset="1" />
-                </RadialGradientBrush.GradientStops>
-            </RadialGradientBrush>
-        </Grid.Background>
         <Grid Grid.Column="0" Grid.Row="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="33*"></RowDefinition>
@@ -37,18 +25,18 @@
                 <ColumnDefinition Width ="33*"></ColumnDefinition>
                 <ColumnDefinition Width ="33*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Grid.Row="0" Grid.Column="0" Margin="5" x:Name="TopLeft" FontSize="70" Background="DarkSlateGray" Foreground="Aqua" Click="Button_Click"></Button>
-            <Button Grid.Row="0" Grid.Column="1" Margin="5" x:Name="TopCenter" FontSize="70" Background="DarkSlateGray" Foreground="Aqua" Click="TopCenter_Click"></Button>
-            <Button Grid.Row="0" Grid.Column="2" Margin="5" x:Name="TopRight" FontSize="70" Background="DarkSlateGray" Foreground="Aqua" Click="TopRight_Click"></Button>
-            <Button Grid.Row="1" Grid.Column="0" Margin="5" x:Name="CenterLeft" FontSize="70" Background="DarkSlateGray" Foreground="Aqua" Click="CenterLeft_Click"></Button>
-            <Button Grid.Row="1" Grid.Column="1" Margin="5" x:Name="CenterCenter" FontSize="70" Background="DarkSlateGray" Foreground="Aqua" Click="CenterCenter_Click"></Button>
-            <Button Grid.Row="1" Grid.Column="2" Margin="5" x:Name="CenterRight" FontSize="70" Background="DarkSlateGray" Foreground="Aqua" Click="CenterRight_Click"></Button>
-            <Button Grid.Row="2" Grid.Column="0" Margin="5" x:Name="BottomLeft" FontSize="70" Background="DarkSlateGray" Foreground="Aqua" Click="BottomLeft_Click"></Button>
-            <Button Grid.Row="2" Grid.Column="1" Margin="5" x:Name="BottomCenter" FontSize="70" Background="DarkSlateGray" Foreground="Aqua" Click="BottomCenter_Click"></Button>
-            <Button Grid.Row="2" Grid.Column="2" Margin="5" x:Name="BottomRight" FontSize="70" Background="DarkSlateGray" Foreground="Aqua" Click="BottomRight_Click"></Button>
+            <Button Grid.Row="0" Grid.Column="0" Margin="5" x:Name="TopLeft" FontSize="70" Background="Black" Foreground="Blue" Click="Button_Click"></Button>
+            <Button Grid.Row="0" Grid.Column="1" Margin="5" x:Name="TopCenter" FontSize="70" Background="Black" Foreground="Blue" Click="TopCenter_Click"></Button>
+            <Button Grid.Row="0" Grid.Column="2" Margin="5" x:Name="TopRight" FontSize="70" Background="Black" Foreground="Blue" Click="TopRight_Click"></Button>
+            <Button Grid.Row="1" Grid.Column="0" Margin="5" x:Name="CenterLeft" FontSize="70" Background="Black" Foreground="Blue" Click="CenterLeft_Click"></Button>
+            <Button Grid.Row="1" Grid.Column="1" Margin="5" x:Name="CenterCenter" FontSize="70" Background="Black" Foreground="Blue" Click="CenterCenter_Click"></Button>
+            <Button Grid.Row="1" Grid.Column="2" Margin="5" x:Name="CenterRight" FontSize="70" Background="Black" Foreground="Blue" Click="CenterRight_Click"></Button>
+            <Button Grid.Row="2" Grid.Column="0" Margin="5" x:Name="BottomLeft" FontSize="70" Background="Black" Foreground="Blue" Click="BottomLeft_Click"></Button>
+            <Button Grid.Row="2" Grid.Column="1" Margin="5" x:Name="BottomCenter" FontSize="70" Background="Black" Foreground="Blue" Click="BottomCenter_Click"></Button>
+            <Button Grid.Row="2" Grid.Column="2" Margin="5" x:Name="BottomRight" FontSize="70" Background="Black" Foreground="Blue" Click="BottomRight_Click"></Button>
         </Grid>
-        
-        <Grid Grid.Row="1">
+
+        <Grid Grid.Row="1" Background ="Black">
             <Grid.RowDefinitions>
                 <RowDefinition Height="50*"></RowDefinition>
                 <RowDefinition Height="50*"></RowDefinition>
@@ -58,12 +46,12 @@
                 <ColumnDefinition Width ="33*"></ColumnDefinition>
                 <ColumnDefinition Width ="33*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Label Grid.Row ="0" Grid.Column="0"  Name ="Palyer1" Content ="Player1" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="25"/>
-            <Label Grid.Row ="0" Grid.Column="1"  Name ="Tie" Content ="Tie" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25"/>
-            <Label Grid.Row ="0" Grid.Column="2"  Name ="Palyer2" Content ="Player2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25"/>
-            <Label Grid.Row ="1" Grid.Column="0"  Name ="Palyer1Score" Content ="0" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="25" Margin="0,0,30,0" />
-            <Label Grid.Row ="1" Grid.Column="1"  Name ="TieScore" Content ="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25"/>
-            <Label Grid.Row ="1" Grid.Column="2"  Name ="Palyer2Score" Content ="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25" Margin="30,0,0,0"/>
+            <Label Grid.Row ="0" Grid.Column="0"  Name ="Palyer1" Content ="Player1" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="25" Foreground="White"/>
+            <Label Grid.Row ="0" Grid.Column="1"  Name ="Tie" Content ="Tie" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" Foreground="White"/>
+            <Label Grid.Row ="0" Grid.Column="2"  Name ="Palyer2" Content ="Player2" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25" Foreground="White"/>
+            <Label Grid.Row ="1" Grid.Column="0"  Name ="Palyer1Score" Content ="0" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="25" Foreground="White" Margin="0,0,30,0" />
+            <Label Grid.Row ="1" Grid.Column="1"  Name ="TieScore" Content ="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" Foreground="White"/>
+            <Label Grid.Row ="1" Grid.Column="2"  Name ="Palyer2Score" Content ="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25" Foreground="White" Margin="30,0,0,0"/>
         </Grid>
 
     </Grid>
