--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -14,7 +14,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition ></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Grid.Row="0">
+        <Grid Grid.Column="0" Grid.Row="0" Background="DarkGray">
             <Grid.RowDefinitions>
                 <RowDefinition Height="33*"></RowDefinition>
                 <RowDefinition Height="33*"></RowDefinition>
@@ -25,15 +25,15 @@
                 <ColumnDefinition Width ="33*"></ColumnDefinition>
                 <ColumnDefinition Width ="33*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Grid.Row="0" Grid.Column="0" Margin="5" x:Name="TopLeft" FontSize="70" Background="Black" Foreground="Blue" Click="Button_Click"></Button>
-            <Button Grid.Row="0" Grid.Column="1" Margin="5" x:Name="TopCenter" FontSize="70" Background="Black" Foreground="Blue" Click="TopCenter_Click"></Button>
-            <Button Grid.Row="0" Grid.Column="2" Margin="5" x:Name="TopRight" FontSize="70" Background="Black" Foreground="Blue" Click="TopRight_Click"></Button>
-            <Button Grid.Row="1" Grid.Column="0" Margin="5" x:Name="CenterLeft" FontSize="70" Background="Black" Foreground="Blue" Click="CenterLeft_Click"></Button>
+            <Button Grid.Row="0" Grid.Column="0" Margin="0,0,5,5" x:Name="TopLeft" FontSize="70" Background="Black" Foreground="Blue" Click="Button_Click"></Button>
+            <Button Grid.Row="0" Grid.Column="1" Margin="5,0,5,5" x:Name="TopCenter" FontSize="70" Background="Black" Foreground="Blue" Click="TopCenter_Click"></Button>
+            <Button Grid.Row="0" Grid.Column="2" Margin="5,0,0,5" x:Name="TopRight" FontSize="70" Background="Black" Foreground="Blue" Click="TopRight_Click"></Button>
+            <Button Grid.Row="1" Grid.Column="0" Margin="0,5,5,5" x:Name="CenterLeft" FontSize="70" Background="Black" Foreground="Blue" Click="CenterLeft_Click"></Button>
             <Button Grid.Row="1" Grid.Column="1" Margin="5" x:Name="CenterCenter" FontSize="70" Background="Black" Foreground="Blue" Click="CenterCenter_Click"></Button>
-            <Button Grid.Row="1" Grid.Column="2" Margin="5" x:Name="CenterRight" FontSize="70" Background="Black" Foreground="Blue" Click="CenterRight_Click"></Button>
-            <Button Grid.Row="2" Grid.Column="0" Margin="5" x:Name="BottomLeft" FontSize="70" Background="Black" Foreground="Blue" Click="BottomLeft_Click"></Button>
-            <Button Grid.Row="2" Grid.Column="1" Margin="5" x:Name="BottomCenter" FontSize="70" Background="Black" Foreground="Blue" Click="BottomCenter_Click"></Button>
-            <Button Grid.Row="2" Grid.Column="2" Margin="5" x:Name="BottomRight" FontSize="70" Background="Black" Foreground="Blue" Click="BottomRight_Click"></Button>
+            <Button Grid.Row="1" Grid.Column="2" Margin="5,5,0,5" x:Name="CenterRight" FontSize="70" Background="Black" Foreground="Blue" Click="CenterRight_Click"></Button>
+            <Button Grid.Row="2" Grid.Column="0" Margin="0,5,5,0" x:Name="BottomLeft" FontSize="70" Background="Black" Foreground="Blue" Click="BottomLeft_Click"></Button>
+            <Button Grid.Row="2" Grid.Column="1" Margin="5,5,5,0" x:Name="BottomCenter" FontSize="70" Background="Black" Foreground="Blue" Click="BottomCenter_Click"></Button>
+            <Button Grid.Row="2" Grid.Column="2" Margin="5,5,0,0" x:Name="BottomRight" FontSize="70" Background="Black" Foreground="Blue" Click="BottomRight_Click"></Button>
         </Grid>
 
         <Grid Grid.Row="1" Background ="Black">
