--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Tic-Tac-Toe" Height="600" Width="500">
+        Title="Tic-Tac-Toe" Height="600" Width="500" MinHeight="450" MinWidth="350">
     <Grid Background ="Black">
         <Grid.RowDefinitions>
             <RowDefinition Height="75*"></RowDefinition>
@@ -25,15 +25,15 @@
                 <ColumnDefinition Width ="33*"></ColumnDefinition>
                 <ColumnDefinition Width ="33*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Grid.Row="0" Grid.Column="0" Margin="0,0,5,5" x:Name="TopLeft" FontSize="70" Background="Black" Foreground="Blue" Click="Button_Click"></Button>
-            <Button Grid.Row="0" Grid.Column="1" Margin="5,0,5,5" x:Name="TopCenter" FontSize="70" Background="Black" Foreground="Blue" Click="TopCenter_Click"></Button>
-            <Button Grid.Row="0" Grid.Column="2" Margin="5,0,0,5" x:Name="TopRight" FontSize="70" Background="Black" Foreground="Blue" Click="TopRight_Click"></Button>
-            <Button Grid.Row="1" Grid.Column="0" Margin="0,5,5,5" x:Name="CenterLeft" FontSize="70" Background="Black" Foreground="Blue" Click="CenterLeft_Click"></Button>
-            <Button Grid.Row="1" Grid.Column="1" Margin="5" x:Name="CenterCenter" FontSize="70" Background="Black" Foreground="Blue" Click="CenterCenter_Click"></Button>
-            <Button Grid.Row="1" Grid.Column="2" Margin="5,5,0,5" x:Name="CenterRight" FontSize="70" Background="Black" Foreground="Blue" Click="CenterRight_Click"></Button>
-            <Button Grid.Row="2" Grid.Column="0" Margin="0,5,5,0" x:Name="BottomLeft" FontSize="70" Background="Black" Foreground="Blue" Click="BottomLeft_Click"></Button>
-            <Button Grid.Row="2" Grid.Column="1" Margin="5,5,5,0" x:Name="BottomCenter" FontSize="70" Background="Black" Foreground="Blue" Click="BottomCenter_Click"></Button>
-            <Button Grid.Row="2" Grid.Column="2" Margin="5,5,0,0" x:Name="BottomRight" FontSize="70" Background="Black" Foreground="Blue" Click="BottomRight_Click"></Button>
+            <Button Grid.Row="0" Grid.Column="0" Margin="0,0,5,5" x:Name="TopLeft" FontSize="70" Background="Black" Foreground="Blue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="Button_Click"></Button>
+            <Button Grid.Row="0" Grid.Column="1" Margin="5,0,5,5" x:Name="TopCenter" FontSize="70" Background="Black" Foreground="Blue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="TopCenter_Click"></Button>
+            <Button Grid.Row="0" Grid.Column="2" Margin="5,0,0,5" x:Name="TopRight" FontSize="70" Background="Black" Foreground="Blue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="TopRight_Click"></Button>
+            <Button Grid.Row="1" Grid.Column="0" Margin="0,5,5,5" x:Name="CenterLeft" FontSize="70" Background="Black" Foreground="Blue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="CenterLeft_Click"></Button>
+            <Button Grid.Row="1" Grid.Column="1" Margin="5" x:Name="CenterCenter" FontSize="70" Background="Black" Foreground="Blue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="CenterCenter_Click"></Button>
+            <Button Grid.Row="1" Grid.Column="2" Margin="5,5,0,5" x:Name="CenterRight" FontSize="70" Background="Black" Foreground="Blue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="CenterRight_Click"></Button>
+            <Button Grid.Row="2" Grid.Column="0" Margin="0,5,5,0" x:Name="BottomLeft" FontSize="70" Background="Black" Foreground="Blue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="BottomLeft_Click"></Button>
+            <Button Grid.Row="2" Grid.Column="1" Margin="5,5,5,0" x:Name="BottomCenter" FontSize="70" Background="Black" Foreground="Blue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="BottomCenter_Click"></Button>
+            <Button Grid.Row="2" Grid.Column="2" Margin="5,5,0,0" x:Name="BottomRight" FontSize="70" Background="Black" Foreground="Blue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="BottomRight_Click"></Button>
         </Grid>
 
         <Grid Grid.Row="1" Background ="Black">
