--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -52,6 +52,7 @@
             <Label Grid.Row ="1" Grid.Column="0"  Name ="Palyer1Score" Content ="0" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="25" Foreground="White" Margin="0,0,30,0" />
             <Label Grid.Row ="1" Grid.Column="1"  Name ="TieScore" Content ="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" Foreground="White"/>
             <Label Grid.Row ="1" Grid.Column="2"  Name ="Palyer2Score" Content ="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="25" Foreground="White" Margin="30,0,0,0"/>
+            <Button Grid.Row="1" Grid.Column="2" Width="50" Height="25" Content="Reset" HorizontalAlignment="Right" VerticalAlignment="Bottom" Background="Black" Foreground="White" Click="Button_Click_1"></Button>
         </Grid>
 
     </Grid>
